--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,9 @@
 name: HeroChat
-version: 4.11.0
+version: 4.11.1
 author: DThielke
 main: com.herocraftonline.dthielke.herochat.HeroChat
 description: Provides highly customizable chat channels
+softdepend: [PermissionsEx]
 commands:
   ch:
     description: Lists all HeroChat commands 
